--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
                         d="M9 12h.01M15 12h.01M10.5 16.5h3m-3.75 3.75h3.75M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9c0-.46-.04-.92-.1-1.36a8.936 8.936 0 0 0-2.24-5.19L12 3Z" />
                 </svg>
             </button>
-            <!-- The class "app-tab" was removed from this button to prevent it from acting like a navigation tab --
+            <!-- The class "app-tab" was removed from this button to prevent it from acting like a navigation tab -->
+            <button id="start-tour-btn" class="mt-auto app-tab" aria-label="Help" data-tippy-content="Start Tour">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round"
